--- a/index.html
+++ b/index.html
@@ -7,20 +7,10 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet"/>
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
+ <link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
@@ -59,6 +49,7 @@
       <p>
         Uses data from past projects to provide better delivery estimates
       </p>
+      <img src="images/icon-calculator.svg" alt="">
     </div>
   </main>
 
