adding alt tags to images

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
       <p>
         Regularly evaluates our talent to ensure quality
       </p>
-      <img src="images/icon-karma.svg" alt="">
+      <img src="images/icon-karma.svg" alt="talent evaluation">
     </div>
     <div class="calculator">
       <h3>Calculator</h3>
       <p>
         Uses data from past projects to provide better delivery estimates
       </p>
-      <img src="images/icon-calculator.svg" alt="">
+      <img src="images/icon-calculator.svg" alt="calculator">
     </div>
   </main>
 
